// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopSourceMedia when data is loaded renders a component with data loaded 1`] = `
<DocumentFragment>
  <div
    class="chart__title"
  >
    <a
      href="/definitions#dimension_source_medium"
    >
      Top Sources/Media
    </a>
  </div>
  <figure
    id="chart_session_source_medium"
  >
    <div
      class="data chart__bar-chart"
    >
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label"
        >
          google / organic
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          47.5%
        </div>
        <div
          class="chart__bar-chart__item__bar"
          style="width: 47%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label"
        >
          (direct) / (none)
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          44.5%
        </div>
        <div
          class="chart__bar-chart__item__bar"
          style="width: 45%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label"
        >
          bing / organic
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          3.3%
        </div>
        <div
          class="chart__bar-chart__item__bar"
          style="width: 3%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label"
        >
          google / cpc
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          1.5%
        </div>
        <div
          class="chart__bar-chart__item__bar"
          style="width: 2%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label"
        >
          yahoo / organic
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.7%
        </div>
        <div
          class="chart__bar-chart__item__bar"
          style="width: 1%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label"
        >
          (not set)
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.7%
        </div>
        <div
          class="chart__bar-chart__item__bar"
          style="width: 1%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label"
        >
          duckduckgo / organic
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.4%
        </div>
        <div
          class="chart__bar-chart__item__bar"
          style="width: 0%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label"
        >
          Other
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          1.5%
        </div>
        <div
          class="chart__bar-chart__item__bar"
          style="width: 1%;"
        />
      </div>
    </div>
  </figure>
</DocumentFragment>
`;

exports[`TopSourceMedia when data is not loaded renders a component in loading state 1`] = `
<DocumentFragment>
  <div
    class="chart__title"
  >
    <a
      href="/definitions#dimension_source_medium"
    >
      Top Sources/Media
    </a>
  </div>
  <figure
    id="chart_session_source_medium"
  >
    <div
      class="data chart__bar-chart"
    />
  </figure>
</DocumentFragment>
`;

exports[`TopSourceMedia when data loading has an error renders a component in error state 1`] = `
<DocumentFragment>
  <div
    class="chart__title"
  >
    <a
      href="/definitions#dimension_source_medium"
    >
      Top Sources/Media
    </a>
  </div>
  <figure
    id="chart_session_source_medium"
  >
    <div
      class="data chart__bar-chart"
    />
  </figure>
</DocumentFragment>
`;
